--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.24.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.6.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
@@ -18,6 +19,7 @@
     "react-minimal-pie-chart": "^8.4.0",
     "react-scripts": "^2.1.3",
     "react-social-icons": "^5.15.0",
+    "react-step-builder": "^3.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
