--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.24.2",
     "react": "^18.2.0",
+    "react-bar-chart": "^0.1.2",
     "react-bootstrap": "^2.6.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
