--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "react-router-dom": "^6.4.2"
   }
 }
