--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.24.2",
     "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dev-utils": "^12.0.1",
