--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,11 +1,15 @@
 {
     "version": 2,
     "builds": [
-      {
-        // Specify file to convert to a serverless function
-        "src": "main.js",
-        // Specify the NPM module that is used for the build
-        "use": "@now/node"
-      }
+        {
+            "src": "main.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
     ]
-  }
+}
