--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-plotly.js": "^2.6.0",
     "react-scripts": "^5.0.1",
     "react-social-icons": "^5.15.0",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
