--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,16 @@
 {
-    "version": 1,
+    "version": 2,
     "builds": [
         {
-            "src": "./main.js",
+            "src": "index.js",
             "use": "@vercel/node"
         }
-    ]
+    ],
+    "routes": [
+        {
+          "src": "/(.*)",
+          "dest": "/"
+        }
+      ]
+    
 }
