--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "config": "^3.3.9",
     "debug": "^4.1.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
