--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,6 @@
     "@mui/lab": "^5.0.0-alpha.111",
     "@mui/material": "^5.10.17",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
@@ -53,6 +52,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "react-router-dom": "^6.4.2"
+    "@testing-library/react": "^13.4.0",
+    "react-router-dom": "^6.4.2",
+    "react-test-renderer": "^18.2.0"
   }
 }
