--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.6.0",
     "react-minimal-pie-chart": "^8.4.0",
     "react-plotly.js": "^2.6.0",
