--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^5.1.0",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
