--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@testing-library/react": "^13.4.0",
     "react-router-dom": "^6.4.2",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.4.1"
   }
 }
