--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.15",
     "morgan": "^1.9.1",
+    "node-gyp": "^10.0.1",
     "nodemon": "^2.0.20",
     "pdfmake": "^0.1.53"
   }
