--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "bankingapp-api",
   "version": "1.0.0",
   "description": "A simple net banking application",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,6 +23,7 @@
     "morgan": "^1.9.1",
     "node-gyp": "^10.0.1",
     "nodemon": "^2.0.20",
-    "pdfmake": "^0.1.53"
+    "pdfmake": "^0.1.53",
+    "twilio": "^5.0.0-rc.1"
   }
 }
